; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_linux-core.c_uv__ifaddr_exclude.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_linux-core.c_uv__ifaddr_exclude.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifaddrs = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@IFF_UP = common dso_local global i32 0, align 4
@IFF_RUNNING = common dso_local global i32 0, align 4
@PF_PACKET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ifaddrs*, i32)* @uv__ifaddr_exclude to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uv__ifaddr_exclude(%struct.ifaddrs* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ifaddrs*, align 8
  %5 = alloca i32, align 4
  store %struct.ifaddrs* %0, %struct.ifaddrs** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.ifaddrs*, %struct.ifaddrs** %4, align 8
  %7 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* @IFF_UP, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %2
  %13 = load %struct.ifaddrs*, %struct.ifaddrs** %4, align 8
  %14 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* @IFF_RUNNING, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %12, %2
  store i32 1, i32* %3, align 4
  br label %41

20:                                               ; preds = %12
  %21 = load %struct.ifaddrs*, %struct.ifaddrs** %4, align 8
  %22 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %21, i32 0, i32 1
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = icmp eq %struct.TYPE_2__* %23, null
  br i1 %24, label %25, label %26

25:                                               ; preds = %20
  store i32 1, i32* %3, align 4
  br label %41

26:                                               ; preds = %20
  %27 = load %struct.ifaddrs*, %struct.ifaddrs** %4, align 8
  %28 = getelementptr inbounds %struct.ifaddrs, %struct.ifaddrs* %27, i32 0, i32 1
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load i64, i64* @PF_PACKET, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %26
  %35 = load i32, i32* %5, align 4
  store i32 %35, i32* %3, align 4
  br label %41

36:                                               ; preds = %26
  %37 = load i32, i32* %5, align 4
  %38 = icmp ne i32 %37, 0
  %39 = xor i1 %38, true
  %40 = zext i1 %39 to i32
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %36, %34, %25, %19
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
